# tauri-plugin-m3

./: Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json  tsdown.config.ts
.github/: dependabot.yaml
.github/workflows/: build.yaml  build_cargo.yaml  build_npm.yaml  publish.yaml
android/: build.gradle.kts
android/src/main/java/: M3Plugin.kt
examples/tauri-app/: index.html  package.json  vite.config.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: bar_color.toml  colors.toml  insets.toml  offsets.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
