[package]
name = "tauri-plugin-m3"
version = "0.1.0"
authors = ["0xk1f0"]
description = "Material3 Plugin for Tauri Apps"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-m3"
license = "GPL-3.0-only"

[dependencies]
tauri = { version = "2.1.1" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
