[package]
name = "tauri-plugin-m3"
version = "0.1.0"
authors = ["0xk1f0"]
description = "Android Material3/MaterialYou Plugin"
readme = "README.md"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-m3"
license = "GPL-3.0-only"
exclude = [
    "/examples",
    "/webview-dist",
    "/webview-src",
    "/node_modules",
    "guest-js/",
    "rollup.config.js",
    "tsconfig.json",
    "package.json"
]

[dependencies]
tauri = { version = "2.1.1" }
serde = "1.0"
thiserror = "2.0"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
